# earthbound-bgfx

./: .gitignore  CMakeLists.txt  conanfile.txt  dumb-compile-win.txt  main.cpp  nrs.cpp  nrs.h
bg/: bg01.txt  bg02.txt  bg03.txt  bg04.txt  bg05.txt  bg06.txt  bg07.txt  bg08.txt  bg09.txt  test.txt
